crates/plan/tests/snapshots/fixtures__mysql_range_est.snap
---
source: crates/plan/tests/fixtures.rs
expression: render(&mysql_json(&name))
---
MySql Estimated
#0 Covering index range scan on orders.ix_orders_placed est=50 act=- loops=-
  Filter: (`shop`.`orders`.`placed_on` between '2026-02-01' and '2026-02-10')
findings:
