crates/plan/tests/snapshots/fixtures__pg_hash_join.snap
---
source: crates/plan/tests/fixtures.rs
expression: render(& pg(stringify! (hash_join)))
---
Postgres Actual
#0 Aggregate est=3 act=4 loops=1 self=2.4ms (1%)
  #1 Hash Join est=9467 act=9990 loops=1 self=6.9ms (4%)
    Hash Cond: (o.customer_id = c.id)
    #2 Seq Scan on orders est=9467 act=9990 loops=1 self=125.6ms (73%)
      Filter: (total > '990'::numeric)
    #3 Hash est=84000 act=84000 loops=1 self=19.8ms (11%)
      #4 Seq Scan on customers est=84000 act=84000 loops=1 self=17.2ms (10%)
findings:
  High FullScan node=Some(2): Seq Scan on orders | Reads 1,000,000 rows. | CREATE INDEX ON orders (total);
  High RowsRemovedByFilter node=Some(2): Filter discards 99% of rows at orders | Read 1,000,000 rows to return 9,990. | An index on the filtered columns lets the scan skip those rows.
  Medium FullScan node=Some(4): Seq Scan on customers | Reads 84,000 rows. | Add an index on the filtered or joined columns, or narrow the query.
